fix image size on smaller screens

--- a/package/styles/editor.scss
+++ b/package/styles/editor.scss
@@ -705,6 +705,10 @@ ul[data-type='taskList'] li[data-checked='true'] > div > p {
           margin-top: 8px !important;
         }
 
+        img {
+          width: 80vw;
+        }
+
         p,
         ul,
         ol,
